--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  overflow-y: scroll; /* Force vertical scrollbar to prevent layout shift */
 }
 
 h1, h2, h3, h4, h5, h6 {
